exports[`Toggler should mount a toggler 1`] = `
<Toggler
  isAnimated={false}
  isOpen={false}>
  <div
    aria-hidden={true}
    className="terra-Toggler" />
</Toggler>
`;

exports[`Toggler should render a default toggler 1`] = `
<div
  aria-hidden={true}
  className="terra-Toggler" />
`;

exports[`Toggler should render a toggler 1`] = `
<div
  aria-hidden="true"
  class="terra-Toggler" />
`;

exports[`Toggler should render an animated toggler 1`] = `
<div
  aria-hidden={true}
  className="terra-Toggler">
  <div>
    <AnimateHeight
      animationStateClasses={
        Object {
          "animating": "rah-animating",
          "animatingDown": "rah-animating--down",
          "animatingToHeightAuto": "rah-animating--to-height-auto",
          "animatingToHeightSpecific": "rah-animating--to-height-specific",
          "animatingToHeightZero": "rah-animating--to-height-zero",
          "animatingUp": "rah-animating--up",
          "static": "rah-static",
          "staticHeightAuto": "rah-static--height-auto",
          "staticHeightSpecific": "rah-static--height-specific",
          "staticHeightZero": "rah-static--height-zero",
        }
      }
      duration={250}
      easing="ease"
      height="0"
      style={Object {}}>
      Test
    </AnimateHeight>
  </div>
</div>
`;

exports[`Toggler should render an open toggler 1`] = `
<div
  aria-hidden={false}
  className="terra-Toggler">
  Test
</div>
`;
